medication-list/assets/css/layout.css
/* ... */
#controls ul li {
	display: inline;
	font-size: 12px;
	padding: 2px 7px 3px 7px;
	cursor: pointer;
	margin-right:7px;
}
#controls .reset {
	border-left: #dadada 1px solid;
	padding-left: 14px;
}
#top ul li {
	display: inline;
	font-size: 10px;
	padding: 2px 0px 3px 14px;
	margin: 0 0px 0 10px;
}
#top ul li a, #controls ul li a{ color: #717171; }
#top ul li a:hover, , #controls ul li a:hover{ color: #000; }
#top ul li.active {
	font-weight: bold;
	color: #434343;
}
#controls ul li.active {
	color: #fff;
	background: #747474;
	border-radius:5px;
}
#controls ul li.active a{ color: #fff; }
#top #nav {
	float: right;
}
#top #nav ul li{
	font-size: 14px;
}
#top #patient_card, #top #nav {
	margin: 12px;	
}
#top #patient_card #photo {
	background: url('../images/robert_martin.png');
	height:46px;
	width: 46px;
	display: block-inline;
	margin-right: 10px;
}
#patient_card #info #name {
	line-height: 24px;
}
#patient_card #info #dob, #patient_card #info #gender {
	font-size: 10px;
	display: inline;
}
#patient_card #info #gender {
	margin-left: 15px;	
}
section {	margin: 20px 15px 10px 15px; }
#search {
	display: none;
	margin-left: 12px;
}
#search label {
	background: url('../images/search.png') no-repeat;
	position: absolute;
	margin: 8px 0 0 195px;
	display: block;
	height: 15px;
	width: 15px;
}
#search input {
	opacity: .5;
	z-index: 2;
}
#search input:focus {
	opacity: 1;
	background-color: #fff;
}
.wrapper {
	background-color: #fff;
	border: solid 1px #dadada;
	margin: 8px 6px 6px 6px;
	-moz-box-shadow:    0px 1px 4px 0px #dadada;
  	-webkit-box-shadow: 0px 1px 4px 0px #dadada;
  	box-shadow:         0px 1px 4px 0px #dadada;
}
.header {
	color: #747474;
	font-size: 11px;
	margin: 10px 20px 0px 20px;
}
.header .welcome {
	float: left;
}
.header .todays_date {
	float: right;
}

.interactive_content{
	margin: 0px 6px 0px 6px;
}
table.main_table{
	margin: 0;
	padding: 0;
	width: 100%;
	padding-bottom: 20px;
}
table.main_table thead{
	/*background:#424242;*/
	font-size: 10px;
	color: #747474;
	border-bottom: solid 1px #dadada;
}
.drop_arrow{
	background-image: url(../images/down_arrow.svg);
	height: 7px;
	width: 10px;
	display: inline-block;
	background-repeat: no-repeat;
	vertical-align: top;
	margin: 12px 18px 0px -6px;
}
table.main_table thead tr th{
	padding: 5px 0 12px 0px;
	font-weight: normal;
	text-align: left;
}
table.main_table thead tr th.sort-col:hover{
	color: #fff;
}
table.main_table tbody tr:first-child td {
	margin-top:10px;
}
table.main_table tbody tr {
	font-size: 12px;
	color: #434343;
	/*background: #fff;*/
}
table.main_table tbody tr td {
	padding: 10px 0 12px 0;
	/*padding: 11px 8px 9px 10px*/;
}
table.main_table thead tr th:first-child,
table.main_table tbody tr td:first-child {
	padding-left: 4px;
}
.num{
	width: 30px;
	display: inline-block;
	text-align: right;
}
.sm_num{
	width: 18px;
	display: inline-block;
	text-align: right;
}
th.sorted-asc, th.sorted-desc { color: #434343; }
th .arrow{
	background: url('../images/arrow_inactive.svg') no-repeat;
	background-repeat: no-repeat;
	display: inline-block;
	height: 7px;
	width: 10px;
	margin-bottom:-2px;
	margin-left: 3px;
}
th.sorted-asc .arrow { background: url('../images/arrow.svg') no-repeat;}
th.sorted-desc .arrow { 
	background: url('../images/arrow.svg') no-repeat;
	background: transform:rotate(180deg);
	-moz-transform:rotate(180deg);
	-ms-transform:rotate(180deg); /* IE 9 */
	-webkit-transform:rotate(180deg); /* Opera, Chrome, and Safari */ 
	margin-bottom: 0px;
	margin-left: 0px;
	}

/*Page Styles */
#med_table .closed { display: none; }
.sort-key { display: none; }
th.sortable:hover, td.condition:hover, td.provider:hover { 
	text-decoration: underline; cursor: pointer; } 
table tr td:hover { 
	cursor: pointer; } 
tr.clicked{ background: #ebebeb; }
tr td.dose{ min-width: 65px; }
tr td.sig, tr td.prescribed, tr td.renew_date { min-width: 80px; }
tr.albuterol_row td.sig .sm_num { padding-right: 5px; margin-left: -4px; }
tbody tr td .units, tbody tr td .per, tbody tr td.refills { color:#929292; }
tbody tr td .units, tbody tr td .per { font-size: 10pt; }
tbody tr.closed td { color: #c5c5c5; }
tbody tr.closed td .per, tbody tr.closed td .units { color: #c5c5c5; }
tbody tr td.date{ min-width:86px; }
thead tr th ul{ margin-bottom: 0; }
thead tr th ul li{
	display: inline;
	line-height: 12px;
	margin-bottom: 0;
	margin-left: 10px;
}
tbody tr td .month {
	width: 25px;
	text-align: center;
	display: inline-block;
}
tbody tr td .year {
	text-align: left;
	width: 30px;
	display: inline-block;
}
thead tr th.brand, tbody tr td.brand, thead tr th.sideEffects, tbody tr td.sideEffects {
	display: none; }
tbody tr.child {
	display: none;
	float: left;
	background: #5e5e5e;
}
td.details-control {
	background: url('../images/down_arrow.svg') no-repeat bottom center;
	cursor: pointer;
	height: 6px;
	width: 9px;
	display: inline-block;
}
tr.shown td.details-control {
	background: url('../images/down_arrow.svg') no-repeat top center;
	background: transform:rotate(180deg);
	  -moz-transform:rotate(180deg);
	  -ms-transform:rotate(180deg); /* IE 9 */
	  -webkit-transform:rotate(180deg); /* Opera, Chrome, and Safari */ 
	  margin-bottom: 0px;
	  margin-left: 0px;
			}
tr.shown, table.medication-info {
	background:#fafafa;
	width: 100%;
	margin: -9px 0px 0px 0px;
}
table.medication-info {
	z-index: 5;
	position: relative;
}
table.medication-info tr {
	display: inline-block;
	padding-left: 16px;
}
table.medication-info tr td.label {
	display: block;
	color: #c5c5c5;
	font-size: 10px;
	margin-left: -16px;
	margin-bottom: -12px;
}
table.medication-info tr td {
	color: #747474;
}
table.medication-info tr.status {
}
table.medication-info tr.primary, table.medication-info tr.secondary {
	width: 10%;
}
table.medication-info tr.instructions {
	width: 15%;
}
table.medication-info tr.notes,
table.medication-info tr.side_effects {
	width: 25%;
	line-height: 18px;
	background:#fafafa;
}
/* ... */

